# basilisk-actuator-control-lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: docment.yml  format.yml  static.yml  test.yml
control_loop/: control_loop.cpp  control_loop.hpp
control_loop/bldc/: bldc_arch.md  brushless_6step_commutation.cpp  brushless_6step_commutation.hpp  brushless_6step_control_loop.cpp  brushless_6step_control_loop.hpp  brushless_control_loop.cpp  brushless_control_loop.hpp  brushless_foc.cpp  brushless_foc.hpp  brushless_foc_control_loop.cpp  brushless_foc_control_loop.hpp  foc_util.cpp  math_foc.cpp  math_foc.hpp  readme.md  rotor_estimator.cpp  rotor_estimator.hpp
control_loop/bldc/6step/: 6step_util.cpp  6step_util.hpp  brushless_6step_control_loop.cpp  brushless_6step_control_loop.hpp
control_loop/bldc/docs/: sensorless_foc.md
control_loop/bldc/foc/: brushless_foc_control_loop.cpp  brushless_foc_control_loop.hpp  foc_controller.cpp  foc_controller.hpp  foc_util.cpp  foc_util.hpp  math_foc.cpp  math_foc.hpp  readme.md
control_loop/brushed/: brushed_control_loop.cpp  brushed_control_loop.hpp  readme.md
control_loop/stepper/: readme.md  stepper_control_loop.cpp  stepper_control_loop.hpp
docs/: 6step__util_8hpp_source.html  annotated.html  annotated_dup.js  bridge__3phase_8hpp_source.html  bridge__hbridge_8hpp_source.html  brushed__control__loop_8hpp_source.html  brushless__6step__control__loop_8hpp_source.html  brushless__foc__control__loop_8hpp_source.html  classbasilisk__hal_1_1HAL__CLOCK.html  classbasilisk__hal_1_1HAL__CLOCK.js  classbldc__rotor__estimator_1_1BldcRotorSectorSensor.html  classbldc__rotor__estimator_1_1BldcRotorSectorSensor.js  classbldc__rotor__estimator_1_1BldcSensorlessRotorSectorSensor.html  classbldc__rotor__estimator_1_1BldcSensorlessRotorSectorSensor.js  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimator.html  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimator.js  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimatorFromHall.html  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimatorFromHall.js  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimatorFromHall_1_1ElectricalRotorPosEstimatorFromHallParams.html  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimatorFromHall_1_1ElectricalRotorPosEstimatorFromHallParams.js  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimator_1_1EstimatorInputs.html  classbldc__rotor__estimator_1_1ElectricalRotorPosEstimator_1_1EstimatorInputs.js  classbldc__rotor__estimator_1_1SensorlessRotorFluxObserver.html  classbldc__rotor__estimator_1_1SensorlessRotorFluxObserver.js  classbldc__rotor__estimator_1_1SensorlessRotorFluxObserver_1_1SensorlessRotorFluxObserverParams.html  classbldc__rotor__estimator_1_1SensorlessRotorFluxObserver_1_1SensorlessRotorFluxObserverParams.js  classcontrol__loop_1_1BldcFoc_1_1FocDutyCycleResult.html  classcontrol__loop_1_1BldcFoc_1_1FocDutyCycleResult.js  classcontrol__loop_1_1Brushless6StepControlLoop.html  classcontrol__loop_1_1Brushless6StepControlLoop.js  classcontrol__loop_1_1BrushlessFOCControlLoop.html  classcontrol__loop_1_1BrushlessFOCControlLoop.js  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1BrushlessFOCControlLoopParams.html  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1BrushlessFOCControlLoopParams.js  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1BrushlessFocControLoopParams.html  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1BrushlessFocControLoopParams.js  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1FOCFrameVars.html  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1FOCFrameVars.js  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1FOCInputs.html  classcontrol__loop_1_1BrushlessFOCControlLoop_1_1FOCInputs.js  (+75 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+41 more)
hal/: hal_adc.hpp  hal_clock.hpp  hal_common.hpp  hal_timer.hpp
hwbridge/3phase/: bridge_3phase.hpp  bridge_3phase_drv8323.hpp  phase_inductance_estimator.cpp  phase_inductance_estimator.hpp  phase_resistance_estimator.cpp  phase_resistance_estimator.hpp
hwbridge/h_bridge/: bridge_hbridge.hpp  bridge_hbridge_drv8801.hpp
inc/: bridge_3phase.hpp  brushed_control_loop.hpp  brushless_6step_control_loop.hpp  comm_manager.hpp  comm_message_types.hpp  example.hpp  hal_clock.hpp  hal_common.hpp  hal_gpio.hpp  hal_serial.hpp  input_manager.hpp  math_foc.hpp  param_service.hpp  pid.hpp  stepper_control_loop.hpp  system_manager.hpp
scripts/: format.sh  gdb.sh  generate_documentation.py  linter.sh  setup.sh  test.sh  test_clang_format.sh
src/: brushed_control_loop.cpp  brushless_6step_control_loop.cpp  comm_manager.cpp  example.cpp  input_manager.cpp  math_foc.cpp  param_service.cpp  stepper_control_loop.cpp  system_manager.cpp
test/: CMakeLists.txt  brushed_control_loop_test.cpp  brushless_6step.cpp  brushless_6step_control_loop_test.cpp  brushless_6step_test.cpp  brushless_6step_types_test.cpp  brushless_6step_utils_test.cpp  brushless_control_loop_test.cpp  brushless_foc_control_loop_test.cpp  brushless_foc_test.cpp  brushless_foc_utils_test.cpp  comm_manager_test.cpp  foc_controller_test.cpp  foc_math_test.cpp  input_manager_test.cpp  math_util_test.cpp  mock_hal_adc.hpp  mock_hal_clock.hpp  param_test.cpp  phase_Lest_test.cpp  phase_Rest_test.cpp  pid_test.cpp  rotor_estimator_test.cpp  stepper_motor_test.cpp  system_manager_test.cpp  test.cpp  test_control_loop.cpp
test/mocks/: mock_bridge_3phase.hpp  mock_hal_serial.hpp  mock_hal_timer.hpp  mock_hbridge.hpp  mock_rotor_estimator.hpp
util/: util.hpp
util/math/: math_util.cpp  math_util.hpp
util/pid/: pid.cpp  pid.hpp
(+3 files in other folders)
